Add Shape base and derived classes with area calculation; implement Program.cs to display shape colors and areas; fix build errors and setup project

--- a/week06/Shapes/Shapes.csproj
+++ b/week06/Shapes/Shapes.csproj
@@ -1,4 +1,3 @@
-
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -6,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo> <!-- Fix duplicate attributes -->
   </PropertyGroup>
 
 </Project>
